I will look later when the run method is implemented